# native-libraries

./: .gitignore  README.md
blumamba-splitter-native/src/native/: CMakeLists.txt  bits.c  cmixer.c  csplitter.c  mixer.c  mult.c  splitter.c
blumamba-splitter-native/src/native/include/: bits.h  datasignals_transform_matrix_jni_JNativeMatrixMixer.h  datasignals_transform_matrix_jni_JNativeMatrixSplitter.h  debug.h  mult.h
m2g-rs232-native-aarch64/src/native/: CMakeLists.txt
m2g-rs232-native-x86_64/src/native/: CMakeLists.txt
m2g-rs232-native/src/native/: CMakeLists.txt  m2g.c  m2g_jni.c
m2g-rs232-native/src/native/include/: datasignals_m2g_M2G.h  debug.h  error.h  m2g.h
m2g-rs232-native/src/native/include/bits/: types.h
